<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:padding="20dp"
    tools:context=".LoginActivity">

    <!--TextView: Label Login-->
    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:textAlignment="center"
        android:text="@string/login"
        android:textColor="@color/colorBlack"
        android:textSize="25sp"/>

    <!--EditView: Input Email-->
    <com.google.android.material.textfield.TextInputLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_centerHorizontal="true"
        android:layout_centerVertical="true"
        android:id="@+id/emailTIL">
        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/emailEt"
            android:inputType="textEmailAddress"
            android:hint="@string/email"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            />

    </com.google.android.material.textfield.TextInputLayout>

    <!--EditView: Input Password -->

    <com.google.android.material.textfield.TextInputLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_centerHorizontal="true"
        android:layout_centerVertical="true"
        android:id="@+id/passwordTIL"
        android:layout_below="@+id/emailTIL"
        app:passwordToggleEnabled="true">
        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/passwordEt"
            android:inputType="textPassword"
            android:hint="@string/password"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            />

    </com.google.android.material.textfield.TextInputLayout>
    <!--Button: Register User-->
    <Button
        android:id="@+id/loginBtn"
        android:layout_below="@id/passwordTIL"
        android:layout_centerHorizontal="true"
        style="@style/Widget.AppCompat.Button.Colored"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:drawablePadding="5dp"
        android:text="@string/login"/>

    <!--TextView: Show dialog to recover password-->
    <TextView
        android:id="@+id/recoverPassTv"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:textAlignment="center"
        android:text="@string/forgot_password_recover"
        android:layout_below="@+id/loginBtn"
        android:textColor="@color/colorBlack"/>

    <!--GoogleSingInBtn:Sing in with google account-->
    <com.google.android.gms.common.SignInButton
        android:id="@+id/googleLoginBtn"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_centerHorizontal="true"
        android:layout_below="@id/recoverPassTv"></com.google.android.gms.common.SignInButton>

    <!--TextView:Click go to RegisterActivity-->
    <TextView
        android:id="@+id/nothave_accountTv"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/not_have_account_register"
        android:textAlignment="center"
        android:layout_alignParentBottom="true"
        android:layout_marginTop="30dp"
        android:textColor="@color/colorBlack"
        android:layout_marginBottom="20dp"/>
</RelativeLayout>